--- a/re-dream.html
+++ b/re-dream.html
@@ -1,2 +1,7 @@
-<h1>My made up dream</h1>
-<p>imaginary dream</p>
+<h1>FUTURE TELLING DREAMS</h1>
+    <p>I once had a dream where I was at my cabin and I decided to go fishing.
+I decided to go fishing along the shore with a paddle board. During that fishing journey
+I actually caught a large pike. At That point I woke up and realized it was a dream and
+was actually pretty disapointed. So I decided to go fishing the exact same place. I ended
+up catching the exact same sized pike in the exact same spot.
+(the only dreams I can remember are dreams that end up happenning the next day.) </p>
