--- a/Gnu.html
+++ b/Gnu.html
@@ -1,2 +1,2 @@
                                       <h1>The Gnu</h1>s
- span {background-color: green; }
+ The Gnu is known for its commonality with an antelope
