--- a/Gnu.html
+++ b/Gnu.html
@@ -1,2 +1,24 @@
-                                      <h1>The Gnu</h1>s
- The Gnu is known for its commonality with an antelope
+<style>
+  .fun {
+    background-color: white;
+    color: black;
+  }
+</style>
+  <body>
+     <div class="fun">
+        <u><h1>-THE GNU-</h1></u>
+        <h2>(connochaestes)</h2>
+    </div>
+  </body>
+    <style>
+ body {background-color: teal;
+      }
+  </style>
+    <body>
+        The gnu is most commenly known as the wildebeest. The wildebeest
+      is a very large antelope from Africa. The gnu is the largest of the antelopes.
+      They are commenly related to goats, sheep, and cattle.
+      The wildebeest's prefered habitat is in the savannahs and plains.
+      They often eat grass, leaves, and shoots. Male wildebeests don't eat during the
+      mating season. 
+    </body>
