--- a/Gnu.html
+++ b/Gnu.html
@@ -16,9 +16,37 @@
   </style>
     <body>
         The gnu is most commenly known as the wildebeest. The wildebeest
-      is a very large antelope from Africa. The gnu is the largest of the antelopes.
-      They are commenly related to goats, sheep, and cattle.
-      The wildebeest's prefered habitat is in the savannahs and plains.
+      is a very large antelope from Africa. Heres a list of countries where Gnus can be found.
+      <li>Kenya</li>
+      <li>Tanzania</li>
+      <li>botswana</li>
+      <li>Zambia</li>
+      <li>Zimbabwe</li>
+      <li>Mozambique</li>
+      <li>South Africa</li>
+      The gnu is the largest of the antelopes.
+      They are commenly related to goats, sheep, and cattle. The wildebeest's prefered habitat is in the savannahs and plains.
       They often eat grass, leaves, and shoots. Male wildebeests don't eat during the
-      mating season. 
+      mating season. During the rainy season there are said to be over 500,000 gnus born every year.
+      The calves can weigh nearly 40-49 pounds at birth, and as soon as the calf is born it knows how to walk almost emediatly.
+      As soon as the calf turns 16 months old it can start mating, but only up until 79 months old.
     </body>
+
+<style>
+  .fun {
+    background-color: black;
+    color: white;
+  }
+</style>
+<body>
+  <div class="fun">
+    <h3>FUN FACTS</h3>
+  </div>
+</body>
+<ul>
+  <li>The blue wildebeest has almost five different subspecies, while the black wildebeest has none.</li>
+  <li>Males are known as bulls and females are known as cows</li>
+  <li>1.5 million gnus migrate every year. Each time they travel with gazelles and zebras</li>
+  <li>adult male gnus can run about 50 miles an hour.</li>
+  <li>There life span tends to be about 20 years.</li>
+</ul>
