No more puppy mills

--- a/enviornmentalprojects.html
+++ b/enviornmentalprojects.html
@@ -1,16 +1,82 @@
   <!DOCTYPE html>
+  <style>
+    .fun { background-color: black;
+    color: blue;
+    }
+    </style>
   <html>
 <style>
 body
-  {background-color: skyblue;}
+  {background-color: lightblue;}
 </style>
-  <img src="arctic-ocean.jpg" alt=""
-      height="99" width="1132">
+    <body>
+      <div class="fun">
+        <center><u><h1> ALL DOGS DESERVE TO BE RESPECTED</h1></u></center>
+      </div>
+      </body>
+  <body>
+    <style>
+    .Fun2 {
+          color: black;
+    }
+  </style>
+  <img src="unknown.jpeg" alt=""
+    width= "450" height="300" align="right">
+    </div>
+  <body>
+    <div class="Fun2">
+    <h3>There are many dogs who are being abused and tortured while in incredibly awful homes. Puppy mills are considered as establishments that breed and sell dogs.
+    <br>In some states puppy mills are not illegal beacause they provide food/water and shelter, but just because they provide it doesn't make it right,
+      considering that the food/water and shelter isn't in the best conditions. The state with the most puppy mills is currently Missouri. Other states with high ratings of puppy mills are Ohio, Indiana, and pennsylvania.</h3>
+    <h2>THE STATES WITH NO LAWS AGAINST PUPPY MILLS IN 2018</h2>
+    <h4>(many of these have been changed since then, but this still
+      <br>shows how many dogs
+      were harmed in the past because humans didn't bother to change some laws just
+      because it didn't bother their daily lives.)
 
-  <img src="Unknown.jpeg" alt="">  <center><h1>SAVE THE POLAR BEARS</h1></center>
-  <img src="Unknown-2.jpeg" alt="">
+    <li>Alaska</li>
+    <li>Alabama</li>
+    <li>Arkansas</li>
+    <li>Florida</li>
+    <li>Hawaii</li>
+    <li>Idaho</li>
+    <li>Kentucky</li>
+    <li>Minnesota</li>
+    <li>Mississippi</li>
+    <li>Montana</li>
+    <li>Nevada</li>
+    <li>New Mexico</li>
+    <li>North Dakota</li>
+    <li>Oklahoma</li>
+    <li>Oregon</li>
+    <li>South Carolina</li>
+    <li>South Dakota</li>
+    <li>Texas</li>
+    <li>Utah</li>
+    <li>Washinton</li>
+    <li>Wyoming</li>
+  </body>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/IAn3Wts-dXY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <h5>This video shows what conditions the dogs have to live in and how they are rescued from the torture.</h5>
 
+  <br><h3>One of the main reasons, for the owners of the mills, to get money. Selling all the thousands of puppies they get every year can give you a moderatly sized profit. None of them actually care about the dogs. When puppies are sold they are often given/ sold to pet store.
+  So if you really want to get a dog then your first option should be adopting from a shelter. Your second option could be getting a dog from a responsible breeder. To make sure that they are responsible enought, for you to support them, then you have to ask if you can come see the home.
+  If they say no then that could possibly mean that they are trying to hide something. Your options should never be a pet store, because those puppies are more than likely to be from a mill. Just make sure that your first option is always the animal shelter.</h3>
 
+<cite>https://protectedpaws.org/legislation/puppy-mill-laws-by-state</cite>
 
+<br><cite>https://www.thepuppymillproject.org/about-puppy-mills/</cite>
 
+<br><cite>youtube</cite>
+
+<br><cite>google images</cite>
+<style>
+.Fun2 {background-color: white;
+    color: black;}
+  </style>
+  <body>
+    <div class="Fun2">
+      <br><h4>Created by Anastasia K.</h4>
+    </div>
+  </body>
   </html>
