--- a/collection project/shell2.html
+++ b/collection project/shell2.html
@@ -35,6 +35,11 @@ body
 <li>empty shells are often found washed up near beaches</li>
 <li>empty shells are found because the animals that live in the shell has died and the body have been eaten by other animals</li>
 </ul>
+<tr>
+  <th></th>
+  <th scope="row"><a href="./places.html">Places</a></th>
+ <td><a href="./aboutus.html">about us</a></td>
+<tr><th scope="row"><a href="./funfacts.html">fun facts</a></th>
 </div>
 <br>
 <br>
