--- a/collection project/shell2.html
+++ b/collection project/shell2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<title>Seashells</title>
 <style media="screen">
 body
 {background-color: lightblue;
@@ -31,15 +31,35 @@ body
   <div class="style1">
     <img src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/6495294/910/607/m2/fpnw/wm1/iqmvgspms9f6niq0sxpbv9u3denyajh3andzlzf0uowzjfcujdjw0f7uvv96cemj-.jpg?1559751712&s=30cb2d92ea6f2dfa6d55c7f89904e9b1" alt="seashell 1" length=250 width=450 align=right>
 <ul>
-<li>a hard, protective outer layer created by an animal that lives in the sea</li>
+<li>A hard, protective outer layer created by an animal that lives in the sea</li>
 <li>empty shells are often found washed up near beaches</li>
 <li>empty shells are found because the animals that live in the shell has died and the body have been eaten by other animals</li>
 </ul>
-<tr>
-  <th></th>
-  <th scope="row"><a href="./places.html">Places</a></th>
- <td><a href="./aboutus.html">about us</a></td>
-<tr><th scope="row"><a href="./funfacts.html">fun facts</a></th>
+
+<table>
+     <table border="1px" :solid-black;>
+     <tr>
+       <th></th>
+       <th scope="col">Classification</th>
+       <th scope="col">PLACE</th>
+     </tr>
+
+     <tr>
+       <th scope="row">FROG</th>
+       <td>Bursidae</td>
+       <td>Indo-Pacific</td>
+     </tr>
+     <tr>
+       <th scope="row">COWRIE</th>
+       <td>Cypraeidae</td>
+       <td>Worldwide</td>
+     </tr>
+     <tr>
+       <th>SPINDLE</th>
+       <td>Fasciolariidae</td>
+       <td>Indian Ocean</td>
+     </tr>
+   </table>
 </div>
 <br>
 <br>
