--- a/PNW project/activity.html
+++ b/PNW project/activity.html
@@ -17,5 +17,36 @@
 </ul>
 </div>
 </body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<table>
+  <tr>
+    <th>(with) FAMILY</th>
+    <th>(with) PETS</th>
+    <th>(with) DATE</th>
+  </tr>
+  <tr>
+    <td> Market Ghost Tour</td>
+    <td>Washington Park Arboretum</td>
+    <td>Refract</td>
+  </tr>
+  <tr>
+    <td>Seattle Aquarium</td>
+    <td>Free National Park Day</td>
+    <td>The Cozy Nut Tavern</td>
+  </tr>
+  <tr>
+    <td>Seattle Children’s Festival</td>
+    <td>Pumpkin & Apple Picking</td>
+    <td>Seattle Art Museum</td>
+  </tr>
+</table>
+
 
 </html>
