--- a/PNW project/citations.html
+++ b/PNW project/citations.html
@@ -20,4 +20,17 @@
 </div>
 </body>
   </body>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+<a href="url">https://www.fourpaws.com/pets-101/family-matters/10-fall-activities-with-your-pet</a>
+<br>
+<a href="url">https://www.clippervacations.com/magazine/things-to-do-seattle-fall/</a>
+<br>
+<a href="url">https://www.onecountry.com/entertainment/10-fun-fall-facts/</a>
+<br>
+<a href="url">https://www.taskeasy.com/blog/recent-clippings/2015/09/23/10-fun-facts-about-fall</a>
 </html>
