--- a/PNW project/food.html
+++ b/PNW project/food.html
@@ -20,4 +20,19 @@
 </div>
 </body>
   </body>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p> If you search up facts about fall, on every single website you will them talking about how
+  <br> weight gain in the fall is very normal because of all the great foods around. Some may include
+  <br>apples, sweet potatoes, squash, and anything involving pumpkins.
+  <br>
+  <br>One of the places to consider going to for some seasonal drinks could be starbucks. They always have many
+  <br>different pumpkin flavored snacks and drinks. Other places to go for food could be some fall type
+  <br>events in Tacoma or Seattle. 
+  <br>
+  <br>
+  <br>
 </html>
