--- a/PNW project/home.html
+++ b/PNW project/home.html
@@ -28,10 +28,9 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-  <p>During fall the leaves chamge colors and they eventually fall off the trees landing on the ground.
-<br> Eventually the leaves would blow around to eventually be placed into giant leaf piles.
+<p> In America September through December is typically known as fall but many other
+<br>countries may call this time Autumn. In the past this time was also called harvest,
+<br>refering to the harvest festival.
 <br>
 <br>
 <br>
@@ -72,33 +71,45 @@ div.desc {
 <body>
 
 <div class="gallery">
-   <img src="images-1.jpeg" alt="Fall items" width="600" height="400">
+   <img src="images-1.jpeg" alt="Fall items" width="605" height="400">
  </a>
  <div class="desc"> Popular Fall Items</div>
 </div>
 
 <div class="gallery">
-   <img src="images.jpeg" alt="Pumkins" width="600" height="400">
+   <img src="images.jpeg" alt="Pumkins" width="605" height="400">
  </a>
  <div class="desc">Just Some Fall Pumkins</div>
 </div>
 
 <div class="gallery">
-   <img src="images copy.jpeg" alt="leaf colors" width="600" height="400">
+   <img src="images copy.jpeg" alt="leaf colors" width="605" height="400">
  </a>
  <div class="desc">Different Fall Leaf Colors</div>
 </div>
 
 <div class="gallery">
-   <img src="Unknown.jpeg" alt="dogs" width="600" height="400">
+   <img src="Unknown.jpeg" alt="dogs" width="605" height="400">
  </a>
  <div class="desc">Dogs In a Leaf Pile (just for fun)</div>
 </div>
 
 <div class="gallery">
-   <img src="images copy 2.jpeg" alt="scary" width="600" height="400">
+   <img src="images copy 2.jpeg" alt="scary" width="605" height="400">
  </a>
  <div class="desc">Halloween</div>
+</div>
+
+<div class="gallery">
+   <img src="Unknown.jpeg" alt="pretty mountains" width="605" height="400">
+ </a>
+ <div class="desc">Pretty Fall Mountains</div>
+</div>
+
+<div class="gallery">
+    <img src="Unknown copy.jpeg" alt="New York" width="605" height="400">
+  </a>
+  <div class="desc">New York in The Fall</div>
 </div>
 
 </body>
