--- a/buzzfeedquiz/buzzfeedquiz.html
+++ b/buzzfeedquiz/buzzfeedquiz.html
@@ -1,9 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>hello</title>
+  <title>buzzfeed quiz</title>
   <link href="buzzfeedquiz.css" type="text/css" rel="stylesheet">
 </head>
+<h1> WHERE YOU SHOULD TRAVEL NEXT QUIZ</h1>
+<br>
+<br>
+<br>
+<form class="style"  method="post">
+  <label for="username">NAME :</label>
+  <input type="text" name="username" id="user">
+  <input type="button" value="submit" onclick="showInput();">
+</form>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="Unknown-1.jpeg" alt="">
+<img src="images-1.jpeg" alt="">
+<img src="Unknown.png" alt="">
+<img src="Unknown-4.jpeg" alt="">
+<img src="Unknown-3.jpeg" alt="">
+<img src="Unknown-1.png" alt="">
+<img src="Unknown-2.jpeg" alt="">
+<img src="Unknown-5.jpeg" alt="">
+<img src="images.jpeg" alt="">
+<img src="images.png" alt="">
+
+
+
+<script type="JavaScript">
+  function showInput() {
+    document.getElementById("username").innerHTML=
+    document.getElementById('name')
+  }
+
+</script>
 
 
 </html>
